--- a/comments.html
+++ b/comments.html
@@ -1,4 +1,4 @@
-<form method="POST" action="https://savefrys.herokusapp.com/v3/entry/github/mocsabnimajneb/savefrys.com/staticman/comments">
+<form method="POST" action="https://savefrys.herokuapp.com/v3/entry/github/mocsabnimajneb/savefrys.com/staticman/comments">
   <!--input name="options[redirect]" type="hidden" value="https://savefrys.com">
   <!-- e.g. "2016-01-02-this-is-a-post"
   <!--input name="options[slug]" type="hidden" value="{{ page.slug }}" -->
