--- a/comments.html
+++ b/comments.html
@@ -1,5 +1,5 @@
 <form method="POST" action="https://savefrys.herokuapp.com/v3/entry/github/mocsabnimajneb/savefrys.com/staticman/comments">
-  <!--input name="options[redirect]" type="hidden" value="https://savefrys.com">
+  <input name="options[redirect]" type="hidden" value="https://savefrys.com">
   <!-- e.g. "2016-01-02-this-is-a-post"
   <!--input name="options[slug]" type="hidden" value="{{ page.slug }}" -->
   <label>Name<input name="fields[name]" type="text"></label>
