--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
 $(document).ready(function() {
 var table = $('#example').DataTable({
 "ajax": {
-"url": "data/comments/entries.json"
+"url": "data/comments/entries.json",
 "columns": [
 { "data": "name" },
 { "data": "email" },
